fix(field-select): fix weird icon styling and z-index fault

--- a/src/scss/shared/fieldSelect.scss
+++ b/src/scss/shared/fieldSelect.scss
@@ -16,6 +16,7 @@ $input-padding: .3rem .4rem;
 
     .vfg-select-label {
       display: flex;
+      align-items: center;
       justify-content: space-between;
       flex: 1 0 70%;
       align-content: center;
@@ -35,6 +36,7 @@ $input-padding: .3rem .4rem;
       border-radius: 3px;
       max-height: 250px;
       overflow-y: auto;
+      z-index: 999;
 
       .vfg-select-list {
         border-radius: inherit;
